--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-#ignoring the node_modules directory so that it cant be tracked by git tool
+#ignoring the files and directory so that it cant be tracked by git tool
 node_modules/
 .env
